# place_recognition

./: CMakeLists.txt  README.md  readme.md
include/: bow_dictionary.hpp  convert_dataset.hpp  histogram.hpp  kmeans.hpp  place_recognition.h  recognition.hpp  serialize.hpp
src/: bow_dictionary.cpp  convert_dataset.cpp  histogram.cpp  html_writer.cpp  image_browser.cpp  kmeans.cpp  main.cpp  recognition.cpp  serialize.cpp
